# DataStructure_and_Algorithm

./: CMakeLists.txt  README.md
CircularLinkList/: Circular.c
DoublyLinkedList/: dbLinkList.c
LinkList/: README.md  linkList.c  linkList.h  main.c
LinkedListChallenge/: Challenge1.c  Challenge2.c  Challenge3.c
Stack/: infixToPostfix.c  postfixCalculation.c  sudentChallenge.c
StackTopic/: paranthesisCheck.c  stackArray.c  stackLinkedList.c  studentChallenge2.c
Tree/: BST.c
